--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -23,7 +23,12 @@
 
 
     <footer>
+        <div class="banner">
+            <img src="./4safe.png" alt="Nome logo">
+            <div class="icones">
 
+            </div>
+        </div>
     </footer>
 </body>
 </html>
