Esqueleto top bar feito

--- a/LandingPage/contato.html
+++ b/LandingPage/contato.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-
-     <header>
-
+    <header class="topbar" alt ="cabeçalho">      
+        <nav class="menu">
+            <a href="/index.html">Home</a>
+            <a href="/contato.html">Contato</a>
+        </nav>
     </header>
-
-
     <main class="contato-ajuste" >
         <section class="contact">
             <div class="content">
