Ajustei cores do topbar e do footer, ajustei width do footer

--- a/LandingPage/contato.html
+++ b/LandingPage/contato.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/contato.css"> 
-    <title>Document</title>
+    <title>4Safe - Seguros</title>
 </head>
 <body>
     <header class="topbar" alt ="cabeçalho">      
         <nav class="menu">
             <a href="/index.html">Home</a>
             <a href="/contato.html">Contato</a>
+            <a href="/trabalhe.html">Trabalhe-conosco</a>
         </nav>
     </header>
     <main class="contato-ajuste" >
         <section class="contact">
             <div class="content">
-                <img class = "imagem-logo" src="/img/4safe-sem-legenda.png">
+                <img class = "imagem-logo" src="/img/4safe-apenascavalo.png">
                 <p>
                      Entre em contato conosco!
                 </p>
