--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/main.css"> 
-    <title>Document</title>
+    <title>4Safe - Seguros</title>
 </head>
 
     <header class="topbar" alt ="cabeçalho">
@@ -13,6 +13,7 @@
             <nav class="menu">
                 <a href="/index.html">Home</a>
                 <a href="/contato.html">Contato</a>
+                <a href="/trabalhe.html">Trabalhe-conosco</a>
 
             </nav>
     </header>
