--- a/LandingPage/contato.html
+++ b/LandingPage/contato.html
@@ -1,75 +1,98 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/contato.css"> 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/contato.css" />
     <title>4Safe - Seguros</title>
-</head>
-<body>
-    <header class="topbar" alt ="cabeçalho">      
-        <nav class="menu">
-            <a href="/index.html">Home</a>
-            <a href="/contato.html">Contato</a>
-            <a href="/trabalhe.html">Trabalhe-conosco</a>
-        </nav>
+  </head>
+  <body>
+    <header class="topbar" alt="cabeçalho">
+      <img class="img-topbar" src="/img/logo_mais_4safe.png" />
+      <nav class="menu">
+        <a href="/index.html">Home</a>
+        <a href="/contato.html">Contato</a>
+        <a href="/trabalhe.html">Trabalhe-conosco</a>
+      </nav>
     </header>
-    <main class="contato-ajuste" >
-        <section class="contact">
-            <div class="content">
-                <img class = "imagem-logo" src="/img/4safe-apenascavalo.png">
+    <main class="contato-ajuste">
+      <section class="contact">
+        <div class="content">
+          <img class="imagem-logo" src="/img/4safe-apenascavalo.png" />
+          <p>Entre em contato conosco!</p>
+        </div>
+        <div class="container">
+          <div class="contactInfo">
+            <div class="box">
+              <div class="text">
+                <h3>Endereço</h3>
                 <p>
-                     Entre em contato conosco!
+                  Rua- complete aqui<br />
+                  cidade -complete aqui <br />
+                  cep -complete aqui
                 </p>
+              </div>
             </div>
-            <div class="container">
-                <div class="contactInfo">
-                    <div class="box">
-                        <div class="text">
-                            <h3>Endereço</h3>
-                            <p>Rua- complete aqui<br> cidade -complete aqui <br> cep -complete aqui</p>                        
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="text">
-                            <h3>Telefone</h3>
-                            <p>(18) 9999-99999</p>                      
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="text">
-                            <h3>Email</h3>
-                            <p>complete aqui</p>                        
-                        </div>
-                    </div>
-                </div>
-                <div class="contactform">
-                    <form>
-                        <h2>Nos envie uma mensagem!</h2>
-                        <div class="inputbox">
-                            <input type="text" name="" required="">
-                            <span>Insira seu nome Completo</span>
-                        </div>
-                        <div class="inputbox">
-                            <input type="text" name="" required="">
-                            <span>Email</span>
-                        </div>
-                        <div class ="inputbox">
-                            <textarea required =""></textarea>
-                            <span>Escreva sua mensagem</span>
-                        </div>
-                        <div class="inputbox">
-                            <input type="submit" name="" value="Enviar">
-                        </div>
-                    </form>
-                </div>
+            <div class="box">
+              <div class="text">
+                <h3>Telefone</h3>
+                <p>(18) 9999-99999</p>
+              </div>
             </div>
-        </section>      
+            <div class="box">
+              <div class="text">
+                <h3>Email</h3>
+                <p>complete aqui</p>
+              </div>
+            </div>
+          </div>
+          <div class="contactform">
+            <form>
+              <h2>Nos envie uma mensagem!</h2>
+              <div class="inputbox">
+                <input type="text" name="" required="" />
+                <span>Insira seu nome Completo</span>
+              </div>
+              <div class="inputbox">
+                <input type="text" name="" required="" />
+                <span>Email</span>
+              </div>
+              <div class="inputbox">
+                <textarea required=""></textarea>
+                <span>Escreva sua mensagem</span>
+              </div>
+              <div class="inputbox">
+                <input type="submit" name="" value="Enviar" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    
-    <footer>
-
+    <footer class="rodape">
+      <div class="banner">
+        <div class="LogoSemLegenda">
+          <img src="./img/4safe-legendat.png" alt="Nome logo" />
+        </div>
+        <div class="icones">
+          <a target="_blank" href="https://www.facebook.com/"
+            ><img src="./img/facebook-128x128-761599.png" alt=""
+          /></a>
+          <a target="_blank" href="https://twitter.com/"
+            ><img src="./img/twitter-128x128-761629.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/"
+            ><img src="./img/instagram-128x128-761608.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.linkedin.com/"
+            ><img src="./img/linkedin-128x128-761611.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.whatsapp.com/?lang=pt_br"
+            ><img src="./img/whatsapp-128x128-761636.png" alt=""
+          /></a>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
