--- a/LandingPage/trabalhe.html
+++ b/LandingPage/trabalhe.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/trabalhe.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/trabalhe.css" />
     <title>4Safe - Seguros</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="topbar" alt="cabeçalho">
-        <img class="img-topbar" src="/img/logo_mais_4safe.png">
-        <nav class="menu">
-            <a href="/index.html">Home</a>
-            <a href="/contato.html">Contato</a>
-            <a href="/trabalhe.html">Trabalhe-conosco</a>
-        </nav>
+      <img class="img-topbar" src="/img/logo_mais_4safe.png" />
+      <nav class="menu">
+        <a href="/index.html">Home</a>
+        <a href="/contato.html">Contato</a>
+        <a href="/trabalhe.html">Trabalhe-conosco</a>
+      </nav>
     </header>
     <main class="trabalho" alt="Imagem de pessoas tralhando">
-        <section class="contact">
-            <div class="content">
-                <img class="imagem-logo" src="/img/imagem-trabalhe-conosco.png">
-            </div>
-            <div class="box">
-                <button>
-                    Carregue seu curriculum
-                </button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="banner">
-            <div class="LogoSemLegenda">
-                <img src="./img/4safe-legendat.png" alt="Nome logo">
-            </div>
-            <div class="icones">
-                <a target="_blank" href="https://www.facebook.com/"><img src="./img/facebook-128x128-761599.png"
-                        alt=""></a>
-                <a target="_blank" href="https://twitter.com/"><img src="./img/twitter-128x128-761629.png" alt=""></a>
-                <a target="_blank" href="https://www.instagram.com/"><img src="./img/instagram-128x128-761608.png"
-                        alt=""></a>
-                <a target="_blank" href="https://www.linkedin.com/"><img src="./img/linkedin-128x128-761611.png"
-                        alt=""></a>
-                <a target="_blank" href="https://www.whatsapp.com/?lang=pt_br"><img
-                        src="./img/whatsapp-128x128-761636.png" alt=""></a>
-            </div>
+      <section class="contact">
+        <div class="content">
+          <img class="imagem-logo" src="/img/imagem-trabalhe-conosco.png" />
         </div>
+        <div class="box">
+          <button>Carregue seu curriculum</button>
+        </div>
+      </section>
+    </main>
+    <footer class="rodape">
+      <div class="banner">
+        <div class="LogoSemLegenda">
+          <img src="./img/4safe-legendat.png" alt="Nome logo" />
+        </div>
+        <div class="icones">
+          <a target="_blank" href="https://www.facebook.com/"
+            ><img src="./img/facebook-128x128-761599.png" alt=""
+          /></a>
+          <a target="_blank" href="https://twitter.com/"
+            ><img src="./img/twitter-128x128-761629.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/"
+            ><img src="./img/instagram-128x128-761608.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.linkedin.com/"
+            ><img src="./img/linkedin-128x128-761611.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.whatsapp.com/?lang=pt_br"
+            ><img src="./img/whatsapp-128x128-761636.png" alt=""
+          /></a>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
