Imagens responsivas, finalizadas

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -20,10 +20,10 @@
       <section class="primeira">
         <div class="conteudoPrimeiraSection">
           <div class="caixaConteudo">
-            <img src="./img/Caixa-de-texto.png" alt="" />
+            <img src="./img/seguro-vida.png" alt="" />
           </div>
           <div class="caixaButton">
-            <button>Saiba mais</button>
+            <a href="./contato.html"> <button>CONTATO</button></a>
           </div>
         </div>
         <div class="imagemPrimeiraSection">
@@ -35,18 +35,18 @@
       </section>
       <section class="segunda">
         <div class="imagemSegundaSection">
-          <img src="./img/teste-imagem.png" alt="" />
+          <img src="./img/seguro-auto.png" alt="" />
         </div>
         <div class="conteudoSegundaSection">
           <div class="caixaConteudo">
-            <img src="./img/Caixa-de-texto.png" alt="" />
+            <img src="./img/seguro-auto-txt.png" alt="" />
           </div>
           <div class="caixaButton">
-            <button>Saiba mais</button>
+           <a href="./contato.html"> <button>CONTATO</button></a>
           </div>
         </div>
         <div class="imagemResponsivaMobile">
-          <img src="./img/375-index.png" alt="" />
+          <img src="./img/carro-responsivo.png" alt="" />
         </div>
       </section>
     </main>
